src/test/deca/context/invalid/test17_multiple_decl.deca
// Description:
//    Programme testant la redeclaration de variable.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//	  test_context : erreur ligne 16 : Variable f was already defined
//
// Historique:
//    cree le 09/01/2020

{
	int f;
	int f = 1;		// f est deja definie
}